--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    {{> header}}
+    {{> headerpublic}}
 
     <div class="display-1 my-5">
       <p align="center">Welcome to TNP</p>
