--- a/views/partials/headerpublic.hbs
+++ b/views/partials/headerpublic.hbs
@@ -19,12 +19,6 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="/help">Help</a>
         </li>
         <li class="nav-item">
@@ -32,7 +26,8 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="/signup">Logout</a>
+        <a class="btn btn-outline-success my-2 my-sm-0 mr-2" role="button" href="/login">Login</a>
+        <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="/signup">Sign Up</a>
       </form>
     </div>
   </nav>
