--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,1 +1,17 @@
-Hello Admin
+{{> header}}
+
+<div class="row">
+  <div class="col-3">
+    <div class="my-5 p-3">
+      <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action active">
+          Cras justo odio
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+        <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+        <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+        <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+      </div>
+    </div>
+  </div>
+</div>
