--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>TNP</title>
+<head>
+  <meta charset="utf-8">
+  <title>TNP</title>
 
-    <style media="screen">
-      body {
-        background-color: #eee;
-      }
-    </style>
-  </head>
-  <body>
-    {{> header}}
+  <style media="screen">
+  body {
+    background-color: #eee;
+  }
+  </style>
+</head>
+<body>
+  {{> header}}
 
-    <div class="container">
-      <div class="row">
+  <div class="container">
+    <div class="row">
 
-        <div class="col-4">
-        </div>
-
-        <div class="col-8">
-          <div class="card my-5 p-3">
-            {{posts}}
+      <div class="col-4">
+        <div class="card text-center my-5 p-3" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-
       </div>
-    </div>
 
-  </body>
+      <div class="col-8">
+        <div class="card my-5 px-3">
+          {{#each posts}}
+            <h4 class="display-4">{{title}}</h4>
+            {{username}}
+            <p>{{content}}</p>
+          {{/each}}
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</body>
 </html>
