--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -32,7 +32,7 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="/signup">Logout</a>
+        <a class="btn btn-outline-success my-2 my-sm-0" role="button" href="/logout">Logout</a>
       </form>
     </div>
   </nav>
