--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,12 +1,151 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>Profile Page</title>
   </head>
   <body>
-    {{> header}}
-    {{username}}
-    <a href="/logout">Logout</a>
+    <div class="row">
+
+      <div class="col-sm-1">
+      </div>
+
+      <div class="col-sm-3">
+
+        <div class="card" style="width: 18rem;">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><p><a href="id" class="text-primary">Pofile</a></p></li>
+              <li class="list-group-item"><p><a href="id1" class="text-primary">About</a></p></li>
+              <li class="list-group-item"><p><a href="id2" class="text-primary">Education</a></p></li>
+              <li class="list-group-item"><p><a href="id3" class="text-primary">Internship & Workshops</a></p></li>
+              <li class="list-group-item"><p><a href="id4" class="text-primary">Extra Curricular Activities</a></p></li>
+              <li class="list-group-item"><p><a href="id5" class="text-primary">Resume</a></p></li>
+            </ul>
+        </div>
+
+      </div>
+
+      <div class="col-sm-0.5">
+      </div>
+
+      <div class="col-sm-6">
+
+        <div class="card" style="width: 40rem;">
+           <span class="border-top"></span>
+              <div id="Profile">
+                 <p>Profile</p>
+                 <hr class="my-4">
+              </div>
+        </div>
+
+        <div class="card" style="width: 40rem;">
+          <span class="border border-secondary"></span>
+            <div class="container">
+
+                  <div id="about">
+                      <h5>About</h5>
+                        <ul class="list-group list-group-flush">
+                         <li class="list-group-item">Date of Birth</li>
+                         <li class="list-group-item">Gender</li>
+                         <li class="list-group-item">Category</li>
+                         <li class="list-group-item">Contact No</li>
+                         <li class="list-group-item">Email</li>
+                         <li class="list-group-item">Address</li>
+                         <li class="list-group-item"></li>
+                        </ul>
+                  </div>
+
+            </div>
+          </div>
+
+          <div class="card" style="width: 40rem;">
+            <span class="border border-secondary"></span>
+              <div class="container">
+
+                  <div id2="Education">
+                      <p>Current/Ongoing Course</p>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item"></li>
+                        </ul>
+                  </div>
+
+              </div>
+          </div>
+
+          <div class="card" style="width: 40rem;">
+          <span class="border border-secondary"></span>
+              <div class="container">
+
+                  <div id2="Education">
+                      <p>Previous Education</p>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item"></li>
+                        </ul>
+                  </div>
+
+              </div>
+          </div>
+
+          <div class="card" style="width: 40rem;">
+            <span class="border border-secondary"></span>
+              <div class="container">
+
+                  <div id3="Internship & Workshops">
+                      <p>Internship & Workshops</p>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item"></li>
+                        </ul>
+                  </div>
+
+              </div>
+          </div>
+
+          <div class="card" style="width: 40rem;">
+            <span class="border border-secondary"></span>
+              <div class="container">
+
+                  <div id4="Extra curricular Activities">
+                      <p>Extra curricular Activities</p>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item"></li>
+                        </ul>
+                  </div>
+
+              </div>
+          </div>
+
+          <div class="card" style="width: 40rem;">
+          <span class="border border-secondary"></span>
+              <div class="container">
+
+                  <div id5="Resume">
+                      <p>Resume</p>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item"></li>
+                        </ul>
+                  </div>
+
+              </div>
+          </div>
+
+      </div>
+  </div>
+
+      <div class="col-sm-3">
+      </div>
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
