--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,13 +15,24 @@
 
   <div class="container">
     <div class="row">
-
       <div class="col-4">
         <div class="card text-center my-5 p-3" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi8Dz5frehlEts1m2kg1b6t70JeZsTU5Jdp_OJfmemnS7RaylByA" alt="" class="rounded-circle border border-light" height="120px" width="120px">
+            <p><h5 class="card-title">{{user.email}}</h5></p>
+            <table class="table table-sm">
+              <thead>
+                <th>Applications</th>
+                <th>Offers</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>2</td>
+                  <td>1</td>
+                </tr>
+              </tbody>
+            </table>
+            <a href="/profile" class="btn btn-primary">Go to Profile</a>
           </div>
         </div>
       </div>
