--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,21 +18,27 @@
       <div class="row">
         <div class="col">
         </div>
-        <div class="col-4 p-5">
-          <form action="/login" method="post">
+        <div class="col-5 p-5">
+          <div class="card my-5 shadow">
+            <div class="card-body">
+              <h5 class="card-title display-4 text-center">Login</h5>
+              <form action="/login" method="post" class="my-5">
 
-            <div class="form-group">
-              <input type="email" class="form-control" name="username"  placeholder="Email">
-            </div>
+                <div class="form-group">
+                  <input type="email" class="form-control" name="username"  placeholder="Email">
+                </div>
 
-            <div class="form-group">
-              <input type="password" class="form-control" name="password"  placeholder="Password">
-            </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" name="password"  placeholder="Password">
+                </div>
 
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <div class="form-group">
+                  <button type="submit" class="btn btn-primary btn-block">Login</button>
+                </div>
+              </form>
+              <p align="center" class="m-4"> Don't have an Account ? <a href="/signup">Sign Up Here</a></p>
             </div>
-          </form>
+          </div>
         </div>
         <div class="col">
         </div>
