--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -16,65 +16,68 @@
 
   {{> headerpublic}}
 
-  <div class="row">
-    <div class="col">
-    </div>
-    <div class="col-5">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title display-4">Sign Up</h5>
-          <form action="/signup" method="post">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col-5">
+        <div class="card my-5 shadow">
+          <div class="card-body">
+            <h5 class="card-title display-4 text-center">Sign Up</h5>
+            <form action="/signup" method="post" class="my-5">
 
-            <div class="form-group">
-              <input type="text" class="form-control" name="usn" placeholder="Enter USN">
-            </div>
-
-            <div class="row">
-              <div class="col form-group">
-                <input type="text" class="form-control" name="fName" placeholder="First Name">
+              <div class="form-group">
+                <input type="text" class="form-control" name="usn" placeholder="Enter USN">
               </div>
-              <div class="col form-group">
-                <input type="text" class="form-control" name="mName" placeholder="Middle Name">
-              </div>
-              <div class="col form-group">
-                <input type="text" class="form-control" name="lName" placeholder="Last Name">
-              </div>
-            </div>
 
-            <div class="form-group">
-              <input type="email" class="form-control" name="email"  placeholder="Enter Email">
-            </div>
-
-            <div class="form-group">
-              <input type="number" class="form-control" name="phone"  placeholder="Phone">
-            </div>
-
-            <div class="form-group">
-              <input type="password" class="form-control" name="password"  placeholder="Password">
-            </div>
-
-            <div class="form-group">
-              <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm Password">
-            </div>
-
-            <div class="form-group">
               <div class="row">
-                <div class="col">
-                  <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+                <div class="col form-group">
+                  <input type="text" class="form-control" name="fName" placeholder="First Name">
                 </div>
-                <div class="col">
-                  <button type="button" class="btn btn-danger btn-block">Cancel</button>
+                <div class="col form-group">
+                  <input type="text" class="form-control" name="mName" placeholder="Middle Name">
+                </div>
+                <div class="col form-group">
+                  <input type="text" class="form-control" name="lName" placeholder="Last Name">
                 </div>
               </div>
-            </div>
-          </form>
-          <p align="center" class="m-4"> Already Have an Account ? <a href="/login">Login Instead</a></p>
+
+              <div class="form-group">
+                <input type="email" class="form-control" name="email"  placeholder="Enter Email">
+              </div>
+
+              <div class="form-group">
+                <input type="number" class="form-control" name="phone"  placeholder="Phone">
+              </div>
+
+              <div class="form-group">
+                <input type="password" class="form-control" name="password"  placeholder="Password">
+              </div>
+
+              <div class="form-group">
+                <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm Password">
+              </div>
+
+              <div class="form-group">
+                <div class="row">
+                  <div class="col">
+                    <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+                  </div>
+                  <div class="col">
+                    <button type="button" class="btn btn-danger btn-block">Cancel</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <p align="center" class="m-4"> Already Have an Account ? <a href="/login">Login Here</a></p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
+      <div class="col">
+      </div>
     </div>
   </div>
+
 
 
   <!-- Optional JavaScript -->
