--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -5,7 +5,7 @@
       <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
         <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Students</a>
         <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
-        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Notices</a>
         <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
       </div>
     </div>
@@ -17,7 +17,6 @@
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
-                  <th>#</th>
                   <th>Name</th>
                   <th>Email</th>
                   <th>Mobile</th>
@@ -28,8 +27,7 @@
               <tbody>
                 {{#each users}}
                 <tr>
-                  <td>1,001</td>
-                  <td>{{name}}</td>
+                  <td>{{profile.about.name.firstName}} {{profile.about.name.middleName}} {{profile.about.name.lastName}}</td>
                   <td><a href="">{{email}}</a></td>
                   <td>dolor</td>
                   <td>sit</td>
@@ -41,7 +39,48 @@
           </div>
         </div>
         <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
-        <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
+        <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+
+        <div class="container-fluid mb-5">
+          <h2>New Notice</h2>
+          <form action="/notice" method="post">
+            <div class="form-group">
+              <label for="title">Title</label>
+              <input type="text" class="form-control" name="title" placeholder="Enter Title">
+            </div>
+            <div class="form-group">
+              <label for="content">Content</label>
+              <textarea class="form-control" name="content" rows="4" placeholder="Enter Content"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Send</button>
+          </form>
+        </div>
+
+        <div class="container-fluid">
+          <h2>Notices</h2>
+            <div class="table-responsive">
+              <table class="table table-striped table-sm">
+                <thead>
+                  <tr>
+                    <th>Title</th>
+                    <th>Time</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {{#each notices}}
+                  <tr>
+                    <td>{{title}}</td>
+                    <td>{{time}}</td>
+                    <td>{{status}}</td>
+                  </tr>
+                  {{/each}}
+                </tbody>
+              </table>
+            </div>
+        </div>
+
+        </div>
         <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
       </div>
     </div>
