--- a/views/jobprofiles.hbs
+++ b/views/jobprofiles.hbs
@@ -8,9 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>TNP</title>
   </head>
   <body>
+
+    {{> header}}
+
     <div class="container-fluid my-3">
       <div class="row">
         <div class="col-sm-2">
