--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -4,9 +4,8 @@
     <div class="col-2 p-3" style="background-color: white">
       <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
         <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Students</a>
-        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Job Profiles</a>
         <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Notices</a>
-        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
       </div>
     </div>
     <div class="col-10">
@@ -20,7 +19,7 @@
                   <th>Name</th>
                   <th>Email</th>
                   <th>Mobile</th>
-                  <th>Status</th>
+                  <th>Branch</th>
                   <th>Verified</th>
                 </tr>
               </thead>
@@ -29,9 +28,9 @@
                 <tr>
                   <td>{{profile.about.name.firstName}} {{profile.about.name.middleName}} {{profile.about.name.lastName}}</td>
                   <td><a href="">{{email}}</a></td>
-                  <td>dolor</td>
-                  <td>sit</td>
-                  <td>Verified</td>
+                  <td>{{profile.about.contact.phone}}</td>
+                  <td>{{profile.about.branch}}</td>
+                  <td>{{profile.status}}</td>
                 </tr>
                 {{/each}}
               </tbody>
@@ -68,10 +67,10 @@
                   </tr>
                 </thead>
                 <tbody>
-                  {{#each notices}}
+                  {{#each posts}}
                   <tr>
                     <td>{{title}}</td>
-                    <td>{{time}}</td>
+                    <td>{{date}}</td>
                     <td>{{status}}</td>
                   </tr>
                   {{/each}}
@@ -81,7 +80,6 @@
         </div>
 
         </div>
-        <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
       </div>
     </div>
   </div>
