--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>TNP</title>
+  <title>TnP</title>
 
   <style media="screen">
   body {
