--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -64,7 +64,7 @@
                     <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
                   </div>
                   <div class="col">
-                    <button type="button" class="btn btn-danger btn-block">Cancel</button>
+                    <a href="/" role="button" class="btn btn-danger btn-block">Cancel</a>
                   </div>
                 </div>
               </div>
