--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,50 +1,19 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <style media="screen">
+    p {
+      font-size: 20px;
+    }
+  </style>
+</head>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+{{> headerpublic}}
 
-    <title>Tnp</title>
-
-    <style media="screen">
-      body {
-        background-image: url('https://png.pngtree.com/thumb_back/fw800/back_pic/02/50/94/55577f91f94e241.jpg');
-      }
-      h1{
-        top:50px;
-        color:red;
-      }
-      p{
-        color:white;
-        top:50;
-        left:50;
-        margin:50;
-        font-family:'calibria';
-      }
-      h4{
-        color:white;
-      }
-    </style>
-
-
-  </head>
-  <body>
-    <h1 align="center">About Us</h1>
-    <div>
-     <p align="center"><strong><h4 align="center">Placement Management Web Application</h4> <p align="center">is a unified web-based solution , </p><p align="center">that transforms cumbursome process of placements at our college into a clutter-free , effortless and smooth experience.</p>
-     <p align="center">The system is an online application that can be accessed throughout the organization and outside as well with proper login provided.This system can be used as an application for the TPO of the college to manage the student information with regards to placement.</p>
-     <p align="center">Our system stores all the personal information of the students, like their personal details, their aggregate marks, their skill set and their technical skills that are required in the CV to be sent to a company.</p>
-     <p align="center">The app facilitates an exclusive inhouse platform for Ballari Institute of Technology and Management which aims at easing the process of campus placement.</p>
-   </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
-</html>
+<div class="container">
+  <h1 align="center" class="display-2">About Us</h1>
+  <div>
+    <p align="center"><h4 align="center" class="display-4">Placement Management Web Application</h4> <p align="center">is a unified web-based solution , </p><p align="center">that transforms cumbursome process of placements at our college into a clutter-free , effortless and smooth experience.</p>
+    <p align="center">The system is an online application that can be accessed throughout the organization and outside as well with proper login provided.This system can be used as an application for the TPO of the college to manage the student information with regards to placement.</p>
+    <p align="center">Our system stores all the personal information of the students, like their personal details, their aggregate marks, their skill set and their technical skills that are required in the CV to be sent to a company.</p>
+    <p align="center">The app facilitates an exclusive inhouse platform for Ballari Institute of Technology and Management which aims at easing the process of campus placement.</p>
+  </div>
+</div>
